--- a/download-google-form-responses/package.json
+++ b/download-google-form-responses/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sp-kyc-controller",
+  "name": "sp-kyc-controller-download-google-form-responses",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
