--- a/download-google-form-responses/package.json
+++ b/download-google-form-responses/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
     "@googleapis/forms": "^1.1.1",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "neat-csv": "^7.0.0"
   }
 }
