--- a/download-google-form-responses/action.yml
+++ b/download-google-form-responses/action.yml
@@ -7,6 +7,8 @@ inputs:
     required: true
   processed-csv:
     required: true
+  extra-args:
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -16,3 +18,4 @@ runs:
     PROCESSED_CSV: ${{ inputs.processed-csv }}
   args:
    - /usr/src/app/download_google_form_responses.mjs
+   - ${{ inputs.extra-args }}
