--- a/download-google-form-responses/package.json
+++ b/download-google-form-responses/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/local-auth": "^2.1.0",
     "@googleapis/forms": "^1.1.1",
     "dotenv": "^16.0.1",
+    "minimist": "^1.2.6",
     "neat-csv": "^7.0.0"
   }
 }
